2014-11-14  Rene Liebscher <R.Liebscher@gmx.de>

	bug #40142 Floating point exception on Ubuntu 10.04
	* avr.c: avoid division by zero in report_progress(), eg. when 
	writing an empty eeprom file were total becomes 0

2014-11-13  Rene Liebscher <R.Liebscher@gmx.de>

	patch #8504 buspirate: Also support "cpufreq" extended parameter
        in binary mode
	* buspirate.c: applied patch + switch off at disable (even when
        a reset follows) + some general whitespace/tab cleanup

2014-10-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #37441: lockbits in ATxmega + avrdude = problem
	* fileio.c: replace strmcp(..., "lock") by strncmp(..., "lock", 4)
	where applicable
	* jtag3.c: (Dito.)
	* jtagmkII.c: (Dito.)

2014-10-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #42267: jtag3isp fails to read lock and fuse bytes directly
	after changing lock byte
	* stk500v2.c (stk500isp_write_byte): As a workaround for broken
	tool firmware, add 10 ms of delay before returning from any
	single-byte write operation.

2014-10-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* stk500v2.c: Use stk500isp_read_byte/stk500isp_write_byte for
	every byte-wide access (rather than JTAGICE3 only).  This finally
	obsoletes the use of the prehistoric SPI_MULTI command where
	AVRDUDE used to assemble all the low-level ISP stuff by itself.

2014-10-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #22248: Read efuse error
	* avrdude.conf.in (m168, m328, m48, m88, t1634, t26, t261, t461,
	t861, t88): In efuse (or hfuse for t26) read operation, turn all
	bits in byte 3 from "x" to "o" (output); this is a first step
	towards fixing the symptoms mentioned in the bug, by unifying the
	behaviour between different AVRs.  Not touched are the historic
	devices where the fuses are not documented to form a full byte
	each (2333, 4433, 4434, 8535, m103, m161, m163).

2014-09-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #43268: usb_drain() call causes LUFA AVR-ISP MKII Code to Fail