@@ -1,5 +1,10 @@
 2014-11-14  Rene Liebscher <R.Liebscher@gmx.de>
 
+	patch #8529 2 more ftdi_syncbb devices
+	* avrdude.conf.in: added 2 new programmers 
+
+2014-11-14  Rene Liebscher <R.Liebscher@gmx.de>
+
 	bug #40142 Floating point exception on Ubuntu 10.04
 	* avr.c: avoid division by zero in report_progress(), eg. when 
 	writing an empty eeprom file were total becomes 0
